--- a/index.html
+++ b/index.html
@@ -31,35 +31,31 @@
         <div class="card1">
             
             <div class="thu">
-                <h2 class="day1">Thu</h2>
-                <img src="image/cloud.png" id="weather-icon">
-                <h3 class="temp-wed">15°C</h3>
+                <h2 ></h2>
+                <img src="" id="weather-icon">
+                <h3 ></h3>
             </div>
             <div class="fri">
-                <h2 class="day2">Fri</h2>
-                <img src="image/hot.jpg" id="weather-icon">
-                <h3 class="temp-thu">32°C</h3>
+                <h2 class="day2"></h2>
+                <img src="" id="weather-icon">
+                <h3 class="temp-thu"></h3>
             </div>
             <div class="sat">
-                <h2 class="day3">Sat</h2>
-                <img src="image/drizzle.webp" id="weather-icon">
-                <h3 class="temp-fri">18°C</h3>
+                <h2 class="day3"></h2>
+                <img src="" id="weather-icon">
+                <h3 class="temp-fri"></h3>
             </div>
             <div class="sun">
-               <h2 class="day4">Sun</h2>
-                <img src="image/hot.jpg" id="weather-icon">
-                <h3 class="temp-sat">20°C</h3>
+               <h2 class="day4"></h2>
+                <img src="" id="weather-icon">
+                <h3 class="temp-sat"></h3>
             </div>
             <div class="mon">
-               <h2 class="day5">Mon</h2>
-                <img src="image/rain.webp" id="weather-icon">
-                <h3 class="temp-sat">8°C</h3>
+               <h2 class="day5"></h2>
+                <img src="" id="weather-icon">
+                <h3 class="temp-sat"></h3>
             </div>
-            <div class="tue">
-               <h2 class="day4">Tue</h2>
-                <img src="image/rain.webp" id="weather-icon">
-                <h3 class="temp-sat">10°C</h3>
-            </div>
+            
         </div>
 
 
